Added checks & updates to domain.pending attribute in firebase. Added logic that determines if the Key on the website matches that domain's key in firebase.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="domainName" type="text" class="thin">
     <label for="domainName">Domain Name</label>
    </div>
-   <button data-target="modal1" id="generateKeyBtn" class="btn btn-large col s6 offset-s3 white blue-text waves-effect waves-blue">Generate</button>
+   <button id="generateKeyBtn" class="btn btn-large col s6 offset-s3 white blue-text waves-effect waves-blue">Generate</button>
   </div>
 
   <!-- Modal Structure -->
