--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     </div>
   </div>
 
+  <button id="scrollDownButton" class="transparent" style="border: none;">
+    <i class="material-icons" id="arrow">keyboard_arrow_down</i>
+  </button>
   <a id="logoutButton">Log Out</a>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
