Added delete confirmation modal

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
     </div>
   </div>
 
+  <div id="deleteUserModal" class="modal">
+    <div class="modal-content">
+      <h4 id="title" class="thin"></h4>
+      <p id="message">Are you sure you would like to delete this user?</p>
+    </div>
+    <div class="modal-footer">
+      <a id="yes-delete" class="modal-action modal-close waves-effect waves-light green white-text btn-flat">Confirm</a>
+      &nbsp;
+      <a id="no-delete" class="modal-action modal-close waves-effect waves-light red white-text btn-flat">Cancel</a>
+    </div>
+  </div>
+
   <div id="loginModal" class="modal">
     <div class="modal-content valign-wrapper blue lighten-5" style="height: 100%;">
       <div class="row valign" style="width: 100%;">
