Added how to button to login page

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           </form>
         </div>
         <button data-target="signUpModal" class="btn btn-large col s12 blue white-text waves-effect">Sign Up</button>
+        <button data-target="howToModal" class="btn col s12 blue white-text waves-effect" style="margin-top: 20px;">How To</button>
       </div>
     </div>
   </div>
