--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         <li>Add the meta tag we give you to your page's source</li>
         <li>Add Edge CMS's js and css files from our cdn</li>
         <pre>  &ltlink href="http://d2p9c1btfi80cn.cloudfront.net/edge-cms.css" rel="stylesheet"&gt</pre>
-        <pre>  &ltscript src="http://d2p9c1btfi80cn.cloudfront.net/edge-cms.js"&gt</script></pre>
+        <pre>  &ltscript src="http://d2p9c1btfi80cn.cloudfront.net/edge-cms.js"&gt&lt/script&gt</pre>
+        <li>Add this line of javascript (can be placed anywhere that loads with the page)</li>
+        <pre>  &ltscript&gtedgeCMS.begin()&lt/script&gt</pre>
         <li>Any elements on your page with class "edge-cms" and a data-key-name attribute will become editable</li>
       </ol>
     </div>
